--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="wrapper">
+        <button id="p" onclick="goBasket()"></button>
         <div class="section1">
             <nav class="wrapperNav">
                  <!-- <div class="basket_box ">
