--- a/product.html
+++ b/product.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Savat</title>
-    <link rel="basket icon" href="./img/titleIcons/cart-shopping-solid.svg" type="img/svg">
+    <title>Mahsulot haqida</title>
+    <link rel="img icon" href="./img/titleIcons/image-regular.svg" type="img/svg"> 
 </head>
-
 <body>
-    <!-- wrapper start -->
+      <!-- wrapper start -->
 
-    <div class="wrapperBasket">
+      <div class="wrapperBasket">
 
         <!-- navbar start -->
 
@@ -47,13 +45,10 @@
         </nav>
 
         <!-- navbar end -->
-        <!-- basket card start -->
-        <div class="basketCard">
+        <div class="productCard">
+
         </div>
-        <!-- basket card end -->
-        <button class="clearBasket">
-            Savatni tozalash
-        </button>
+
     </div>
     <!-- wrapper end -->
 </body>
