--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bosh sahifa</title>
+    <link rel="main icon" href="./img/titleIcons/house-solid.svg" type="img/svg">
 </head>
 
 <body>
